# spend-tracker

./: .gitignore  README.md  app.py  pyproject.toml
pages/: 1_Upload.py  2_Mappings.py  3_Charts.py
spending_tracker/: __init__.py  analytics.py  categorizer.py  config.py  db.py  llm.py  parser.py  services.py
ui/: __init__.py  common.py  overview.py  upload.py
