[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spending-tracker"
version = "0.1.0"
description = "LLM-assisted spending tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.44.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "pdfplumber>=0.11.0",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "langchain-anthropic>=0.3.10",
    "langchain-google-genai>=2.1.2",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
]

[tool.setuptools]
packages = ["spending_tracker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
